--- a/history.txt
+++ b/history.txt
@@ -1,332 +1,837 @@
-    1  sudo apt install terminator
-    2  cd Downloads/
-    3  ls
-    4  ls -l
-    5  ls -al
-    6  sudo apt install ./code_1.78.2-1683731010_amd64.deb 
-    7  code
-    8  sudo apt install python3.7
-    9  clear
-   10  python
-   11  python3
-   12  python3.7
-   13  git clone https://github.com/freshmea/ict_robot_dajung.git
-   14  sudo apt intall git
-   15  sudo apt install git
-   16  git clone https://github.com/freshmea/ict_robot_dajung.git
-   17  mkdir python_class
-   18  cd python_class/
-   19  ls
-   20  python3.7 class1.py 
-   21  history
-   22  git config --global user.email "freshmea@naver.com"
-   23  git config --global user.name "freshmea"
-   24  python -v
-   25  python -V
-   26  sudo update-alternatives --config python
-   27  ls /usr/bin/ | grep python
-   28  sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1
-   29  sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.6 2
-   30  sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.7 3
-   31  sudo update-alternatives --config python
-   32  python
-   33  pip install numpy
-   34  history
-   35  sudo apt install python-pip
-   36  pip install numpy
-   37  pip
-   38  pip3
-   39  sudo apt install python3-pip
-   40  pip3
-   41  pip
-   42  pip install numpy
-   43  sudo pip install numpy
-   44  pip install Cython
-   45  pip install numpy
-   46  pip upgrade
-   47  pip install --upgrade pip
-   48  pip install numpy
-   49  terminator
-   50  ls
-   51  cd ict_robot_dajung/
-   52  ls
-   53  cd src
-   54  ls
-   55  python
-   56  python class42.py
-   57  mkdir data
-   58  python class42.py
-   59  cd data
-   60  ls
-   61  cat text.txt 
-   62  1
-   63  2
-   64  3
-   65  ls
-   66  cd ict_robot_dajung/
-   67  ls
-   68  cd src/
-   69  history
-   70  set FLASK_APP=class60.py
-   71  flask run
-   72  flask run --app class60.py
-   73  /usr/bin/python3.7
-   74  d /home/aa/ict_robot_dajung ; /usr/bin/env /usr/bin/python3.7 /home/aa/.vscode/extensions/ms-python.python-2023.8.0/pythonFiles/lib/python/debugpy/adapter/../../debugpy/launcher 44535 -- /home/aa/ict_robot_dajung/src/class57.py abc def
-   75  python -V
-   76  ls
-   77  cd src
-   78  ls
-   79  python class57.py abc def ggg
-   80  python class57.py --default
-   81  python class57.py default
-   82  python class57.py active
-   83  cd src
-   84  cd ..
-   85  clear
-   86  pip install beautifulsoup4
-   87  pip list
-   88  python3.6
-   89  python
-   90  python3.6
-   91  python3.6 -m pip install beautifulsoup4
-   92  python3.6
-   93  clear
-   94  pip install flask
-   95  cd src
-   96  ls
-   97  set FLASK_APP=class60.py
-   98  flask run
-   99  flask
-  100  ls
-  101  set FLASK_APP=class60.py
-  102  echo FLASK_APP
-  103  echo $FLASK_APP
-  104  flask run
-  105  flask --app
-  106  flask --app class60.py
-  107  flask run --app class60.py
-  108  flask
-  109  flask --app run class60.py
-  110  set FLASK_APP=class60.py
-  111  flask run
-  112  set FLASK_APP=class60.py
-  113  flask run
-  114  set FLASK_APP=class60.py
-  115  flask run
-  116  set FLASK_APP=app.py
-  117  flask run
-  118  fc-list
-  119  fc-font:lang=kp
-  120  fc-font:lang=ko
-  121  fc-font :lang=ko
-  122  fc-font
-  123  fc-list :lang=ko
-  124  fc-list
-  125  fc-list :lang=ko
-  126  sudo apt install terminator
-  127  sudo apt remove terminator
-  128  sudo apt install terminator
-  129  terminator
-  130  cd /usr/bin
-  131  ls
-  132  sudo nano terminator
-  133  terminator
-  134  xterm
-  135  python3.5
-  136  ls /usr/bin/ | grep python
-  137  sudo update-alternatives --config python
-  138  terminator
-  139  python
-  140  sudo update-alternatives --config python
-  141  python
-  142  terminator
-  143  pip install opencv-contrib-python
-  144  python -m pip install opencv-contrib-python
-  145  python -m pip install numpy
-  146  python -m pip install matplotlib
-  147  python -m pip install tensorflow
-  148  python -V
-  149  python3.7 -m pip install opencv-contrib-python
-  150  python3.7 -m pip install numpy
-  151  python3.7 -m pip install matplotlib
-  152  python3.7 -m pip install pillow
-  153  sudo python3.7 -m pip install pillow
-  154  clear
-  155  history
-  156  sudo apt install python3-pip
-  157  history
-  158  python3.7 install skbuild
-  159  python3.7 -m pip install skbuild
-  160  python3.7 -m pip install scikit-build
-  161  history
-  162  python3.7 -m pip install cmake
-  163  sudo apt update
-  164  sudo apt install python3-pip
-  165  history
-  166  opencv -version
-  167  opencv
-  168  pip list
-  169  clear
-  170  history
-  171  python3.7 -m pip list
-  172  python3.7 -m pip list | grep opencv
-  173  pip install --upgrade pip
-  174  python3.7 -m pip install --upgrade pip
-  175  clear
-  176  history
-  177  python3.7 -m pip install tensorflow
-  178  python3.7 -m pip install update
-  179  python3.7 -m pip install upgrade
-  180  python3.7 -m pip install fapy
-  181  python3.7 -m pip list
-  182  yt-dlp
-  183  ls
-  184  cd ict_robot_dajung/
-  185  ls
-  186  cd opencv/
-  187  ls
-  188  python3.7 class03.py
-  189  python3.7 -m pip install youtube_dl
-  190  python3.7 -m pip install pafy
-  191  clear
-  192  history
-  193  clear
-  194  sudo apt-get install python3.7-tk
-  195  sudo apt-get upgrade
-  196  wget https://raw.githubusercontent.com/ROBOTIS-GIT/robotis_tools/master/install_ros2_dashing.sh
-  197  ls
-  198  cat install_ros2_dashing.sh 
-  199  python3 -V
-  200  python3.7 -V
-  201  python -V
-  202  chmod 755 ./install_ros2_dashing.sh
-  203  bash ./install_ros2_dashing.sh
-  204  history
-  205  nautilus
-  206  cd ..
-  207  ls
-  208  bash ./install_ros2_dashing.sh
-  209  sudo apt install python3-colcon-common-extensions
-  210  curl -sSL http://get.gazebosim.org | sh
-  211  sudo apt remove gazebo11 libgazebo11-dev
-  212  sudo apt install gazebo9 libgazebo9-dev
-  213  sudo apt install ros-dashing-gazebo-ros-pkgs
-  214  sudo apt install ros-dashing-cartographer
-  215  sudo apt install ros-dashing-cartographer-ros
-  216  sudo apt install ros-dashing-navigation2
-  217  sudo apt install ros-dashing-nav2-bringup
-  218  sudo apt install python3-vcstool
-  219  source /opt/ros/dashing/setup.bash
-  220  sudo apt install ros-dashing-dynamixel-sdk
-  221  sudo apt install ros-dashing-turtlebot3-msgs
-  222  sudo apt install ros-dashing-turtlebot3
-  223  source ~/.bashrc
-  224  cw
-  225  cs
-  226  ros2 run demo_nodes_cpp talker
-  227  ros2 run demo_nodes_cpp listener
-  228  ros2 topic echo /turtle1/cmd_vel
-  229  ros2 topic bw /turtle1/cmd_vel
-  230  ros2 topic pub --once /turtle1/cmd_vel geometry_msgs/msg/Twist '{linear: {x: 2.0, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 1.8}}'
-  231  ros2 topic pub --1 /turtle1/cmd_vel geometry_msgs/msg/Twist '{linear: {x: 2.0, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 1.8}}'
-  232  rqt
-  233  clear
-  234  ros2 param list
-  235  ros2 param get /turtlesim background_b
-  236  ros2 param get /turtlesim background_r
-  237  ros2 param get /turtlesim background_g
-  238  ros2 param set /turtlesim background_g 255
-  239  ros2 param set /turtlesim background_b 0
-  240  mkdir test
-  241  cd test
-  242  ros2 param dump /turtlesim
-  243  ro2 param dump -h
-  244  ros2 param dump -h
-  245  ros2 param -h
-  246  ros2 action list
-  247  ros2 action info /turtle1/rotate_absolute
-  248  ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RoateAbsolute 0
-  249  ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute 0
-  250  rqt
-  251  ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute 0.0
-  252  ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute '{theta: 0.0}'
-  253  ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute '{theta: 90.0}'
-  254  ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute '{theta: 3.14}'
-  255  history
-  256  history
-  257  ros2 run demo_nodes_cpp talker
-  258  ros2 run demo_nodes_cpp listener
-  259  history
-  260  clear
-  261  ros2 run turtlesim turtlesim_node
-  262  ros2 node list
-  263  ros2 node info /turtlesim
-  264  clear
-  265  ros2 run turtlesim turtle_teleop_key 
-  266  ros2 service call /spawn turtlesim/srv/Spawn "{x: 2, y: 2, theta: 0.2, name: ''}" 
-  267  ros2 node info
-  268  ros2 node info /turtle1/cmd_vel
-  269  ros2 node info 
-  270  ros2 node info /turtlesim
-  271  cd ~
-  272  cd /
-  273  ls
-  274  cd usr
-  275  ls
-  276  cd ..
-  277  cd home
-  278  ls
-  279  cd aa
-  280  ls
-  281  mkdir opencv_sj
-  282  ㅣㄴ
-  283  ls
-  284  cd Downloads/
-  285  ls
-  286  clear
-  287  history
-  288  sudo apt update
-  289  sudo apt upgrade
-  290  history
-  291  python3.7 -m pip install --upgrade pip
-  292  hisotry
-  293  history
-  294  code
-  295  /usr/bin/python3.7 /home/aa/opencv_sj/class02.py
-  296  /usr/bin/python3.7 /home/aa/opencv_sj/class03.py
-  297  /usr/bin/python3.7 /home/aa/opencv_sj/class04.py
-  298  /usr/bin/python3.7 /home/aa/opencv_sj/class05.py
-  299  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  300  /usr/bin/python3.7 /home/aa/opencv_sj/class07.py
-  301  history
-  302  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  303  /usr/bin/python3.7 /home/aa/opencv_sj/class07.py
-  304  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  305  /usr/bin/python3.7 /home/aa/opencv_sj/class07.py
-  306  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  307  /usr/bin/python3.7 /home/aa/opencv_sj/class07.py
-  308  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  309  /usr/bin/python3.7 /home/aa/opencv_sj/class07.py
-  310  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  311  /usr/bin/python3.7 /home/aa/opencv_sj/class07.py
-  312  /usr/bin/python3.7 /home/aa/opencv_sj/class06.py
-  313  /usr/bin/python3.7 /home/aa/opencv_sj/class08.py
-  314  /usr/bin/python3.7 /home/aa/opencv_sj/class09.py
-  315  /usr/bin/python3.7 /home/aa/opencv_sj/class10.py
-  316  /usr/bin/python3.7 /home/aa/opencv_sj/class11.py
-  317  /usr/bin/python3.7 /home/aa/opencv_sj/class12.py
-  318  /usr/bin/python3.7 /home/aa/opencv_sj/class13.py
-  319  /usr/bin/python3.7 /home/aa/opencv_sj/class14.py
-  320  /usr/bin/python3.7 /home/aa/opencv_sj/class15.py
-  321  /usr/bin/python3.7 /home/aa/opencv_sj/class16.py
-  322  /usr/bin/python3.7 /home/aa/opencv_sj/class17.py
-  323  /usr/bin/python3.7 /home/aa/opencv_sj/class18.py
-  324  /usr/bin/python3.7 /home/aa/opencv_sj/class19.py
-  325  /usr/bin/python3.7 /home/aa/opencv_sj/class03.py
-  326  /usr/bin/python3.7 /home/aa/opencv_sj/class19.py
-  327  history
-  328  /usr/bin/python3.7 /home/aa/opencv_sj/class20.py
-  329  /usr/bin/python3.7 /home/aa/opencv_sj/class21.py
-  330  /usr/bin/python3.7 /home/aa/opencv_sj/class22.py
-  331  history
-
+sudo apt install terminator
+cd Downloads/
+ls
+ls -l
+ls -al
+sudo apt install ./code_1.78.2-1683731010_amd64.deb 
+code
+sudo apt install python3.7
+clear
+python
+python3
+python3.7
+git clone https://github.com/freshmea/ict_robot_dajung.git
+sudo apt intall git
+sudo apt install git
+git clone https://github.com/freshmea/ict_robot_dajung.git
+mkdir python_class
+cd python_class/
+ls
+python3.7 class1.py 
+history
+git config --global user.email "freshmea@naver.com"
+git config --global user.name "freshmea"
+python -v
+python -V
+sudo update-alternatives --config python
+ls /usr/bin/ | grep python
+sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1
+sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.6 2
+sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.7 3
+sudo update-alternatives --config python
+python
+pip install numpy
+history
+sudo apt install python-pip
+pip install numpy
+pip
+pip3
+sudo apt install python3-pip
+pip3
+pip
+pip install numpy
+sudo pip install numpy
+pip install Cython
+pip install numpy
+pip upgrade
+pip install --upgrade pip
+pip install numpy
+terminator
+ls
+cd ict_robot_dajung/
+ls
+cd src
+ls
+python
+python class42.py
+mkdir data
+python class42.py
+cd data
+ls
+cat text.txt 
+1
+2
+3
+ls
+cd ict_robot_dajung/
+ls
+cd src/
+history
+set FLASK_APP=class60.py
+flask run
+flask run --app class60.py
+/usr/bin/python3.7
+d /home/aa/ict_robot_dajung ; /usr/bin/env /usr/bin/python3.7 /home/aa/.vscode/extensions/ms-python.python-2023.8.0/pythonFiles/lib/python/debugpy/adapter/../../debugpy/launcher 44535 -- /home/aa/ict_robot_dajung/src/class57.py abc def
+python -V
+ls
+cd src
+ls
+python class57.py abc def ggg
+python class57.py --default
+python class57.py default
+python class57.py active
+cd src
+cd ..
+clear
+pip install beautifulsoup4
+pip list
+python3.6
+python
+python3.6
+python3.6 -m pip install beautifulsoup4
+python3.6
+clear
+pip install flask
+cd src
+ls
+set FLASK_APP=class60.py
+flask run
+flask
+ls
+set FLASK_APP=class60.py
+echo FLASK_APP
+echo $FLASK_APP
+flask run
+flask --app
+flask --app class60.py
+flask run --app class60.py
+flask
+flask --app run class60.py
+set FLASK_APP=class60.py
+flask run
+set FLASK_APP=class60.py
+flask run
+set FLASK_APP=class60.py
+flask run
+set FLASK_APP=app.py
+flask run
+fc-list
+fc-font:lang=kp
+fc-font:lang=ko
+fc-font :lang=ko
+fc-font
+fc-list :lang=ko
+fc-list
+fc-list :lang=ko
+sudo apt install terminator
+sudo apt remove terminator
+sudo apt install terminator
+terminator
+cd /usr/bin
+ls
+sudo nano terminator
+terminator
+xterm
+python3.5
+ls /usr/bin/ | grep python
+sudo update-alternatives --config python
+terminator
+python
+sudo update-alternatives --config python
+python
+terminator
+pip install opencv-contrib-python
+python -m pip install opencv-contrib-python
+python -m pip install numpy
+python -m pip install matplotlib
+python -m pip install tensorflow
+python -V
+python3.7 -m pip install opencv-contrib-python
+python3.7 -m pip install numpy
+python3.7 -m pip install matplotlib
+python3.7 -m pip install pillow
+sudo python3.7 -m pip install pillow
+clear
+history
+sudo apt install python3-pip
+history
+python3.7 install skbuild
+python3.7 -m pip install skbuild
+python3.7 -m pip install scikit-build
+history
+python3.7 -m pip install cmake
+sudo apt update
+sudo apt install python3-pip
+history
+opencv -version
+opencv
+pip list
+clear
+history
+python3.7 -m pip list
+python3.7 -m pip list | grep opencv
+pip install --upgrade pip
+python3.7 -m pip install --upgrade pip
+clear
+history
+python3.7 -m pip install tensorflow
+python3.7 -m pip install update
+python3.7 -m pip install upgrade
+python3.7 -m pip install fapy
+python3.7 -m pip list
+yt-dlp
+ls
+cd ict_robot_dajung/
+ls
+cd opencv/
+ls
+python3.7 class03.py
+python3.7 -m pip install youtube_dl
+python3.7 -m pip install pafy
+clear
+history
+clear
+sudo apt-get install python3.7-tk
+sudo apt-get upgrade
+wget https://raw.githubusercontent.com/ROBOTIS-GIT/robotis_tools/master/install_ros2_dashing.sh
+ls
+cat install_ros2_dashing.sh 
+python3 -V
+python3.7 -V
+python -V
+chmod 755 ./install_ros2_dashing.sh
+bash ./install_ros2_dashing.sh
+history
+nautilus
+cd ..
+ls
+bash ./install_ros2_dashing.sh
+sudo apt install python3-colcon-common-extensions
+curl -sSL http://get.gazebosim.org | sh
+sudo apt remove gazebo11 libgazebo11-dev
+sudo apt install gazebo9 libgazebo9-dev
+sudo apt install ros-dashing-gazebo-ros-pkgs
+sudo apt install ros-dashing-cartographer
+sudo apt install ros-dashing-cartographer-ros
+sudo apt install ros-dashing-navigation2
+sudo apt install ros-dashing-nav2-bringup
+sudo apt install python3-vcstool
+source /opt/ros/dashing/setup.bash
+sudo apt install ros-dashing-dynamixel-sdk
+sudo apt install ros-dashing-turtlebot3-msgs
+sudo apt install ros-dashing-turtlebot3
+source ~/.bashrc
+cw
+cs
+ros2 run demo_nodes_cpp talker
+ros2 run demo_nodes_cpp listener
+ros2 topic echo /turtle1/cmd_vel
+ros2 topic bw /turtle1/cmd_vel
+ros2 topic pub --once /turtle1/cmd_vel geometry_msgs/msg/Twist '{linear: {x: 2.0, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 1.8}}'
+ros2 topic pub --1 /turtle1/cmd_vel geometry_msgs/msg/Twist '{linear: {x: 2.0, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 1.8}}'
+rqt
+clear
+ros2 param list
+ros2 param get /turtlesim background_b
+ros2 param get /turtlesim background_r
+ros2 param get /turtlesim background_g
+ros2 param set /turtlesim background_g 255
+ros2 param set /turtlesim background_b 0
+mkdir test
+cd test
+ros2 param dump /turtlesim
+ro2 param dump -h
+ros2 param dump -h
+ros2 param -h
+ros2 action list
+ros2 action info /turtle1/rotate_absolute
+ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RoateAbsolute 0
+ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute 0
+rqt
+ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute 0.0
+ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute '{theta: 0.0}'
+ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute '{theta: 90.0}'
+ros2 action send_goal /turtle1/rotate_absolute turtlesim/action/RotateAbsolute '{theta: 3.14}'
+history
+history
+ros2 run demo_nodes_cpp talker
+ros2 run demo_nodes_cpp listener
+history
+clear
+ros2 run turtlesim turtlesim_node
+ros2 node list
+ros2 node info /turtlesim
+clear
+ros2 run turtlesim turtle_teleop_key 
+ros2 service call /spawn turtlesim/srv/Spawn "{x: 2, y: 2, theta: 0.2, name: ''}" 
+ros2 node info
+ros2 node info /turtle1/cmd_vel
+ros2 node info 
+ros2 node info /turtlesim
+cd ~
+cd /
+ls
+cd usr
+ls
+cd ..
+cd home
+ls
+cd aa
+ls
+mkdir opencv_sj
+ㅣㄴ
+ls
+cd Downloads/
+ls
+clear
+history
+sudo apt update
+sudo apt upgrade
+history
+python3.7 -m pip install --upgrade pip
+hisotry
+history
+code
+/usr/bin/python3.7 /home/aa/opencv_sj/class02.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class03.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class04.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class05.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class07.py
+history
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class07.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class07.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class07.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class07.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class07.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class06.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class08.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class09.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class10.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class11.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class12.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class13.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class14.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class15.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class16.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class17.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class18.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class19.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class03.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class19.py
+history
+/usr/bin/python3.7 /home/aa/opencv_sj/class20.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class21.py
+/usr/bin/python3.7 /home/aa/opencv_sj/class22.py
+sudo nano history.txt
+git clone https://github.com/freshmea/ict_robot_sj.git
+history
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+sudo apt install ffmpeg
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+sudo apt install build-essential cmake git python3-dev python3-numpy libavcodec-dev libavformat-dev libswscale-dev libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev libgtk-3-dev libpng-dev libjpeg-dev libopenexr-dev libtiff-dev libwebp-dev libopencv-dev x264 libx264-dev libssl-dev ffmpeg
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+python3.7 -m pip install --no-binary opencv-python opencv-python
+/usr/bin/python3.7 /home/aa/ict_robot_sj/07_VideoWriter.py
+/usr/bin/python3.7 /home/aa/ict_robot_sj/06_VideoCapture.py
+echo $SHELL
+ps
+df
+apt list | grep flake8
+sudo apt update && sudo apt install -y   build-essential   cmake   git   libbullet-dev   python3-colcon-common-extensions   python3-flake8   python3-pip   python3-pytest-cov   python3-rosdep   python3-setuptools   python3-vcstool   wget
+python3.7 -m pip install -U   argcomplete   flake8-blind-except   flake8-builtins   flake8-class-newline   flake8-comprehensions   flake8-deprecated   flake8-docstrings   flake8-import-order   flake8-quotes   pytest-repeat   pytest-rerunfailures   pytest
+python3 -V
+sudo update-alternatives --config python3
+sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1
+python3 -V
+ls /usr/bin/python
+ls /usr/bin/python*
+cd /usr/bin/python3
+cat /usr/bin/python3
+clear
+python3 -V
+sudo apt install --no-install-recommends -y   libasio-dev   libtinyxml2-dev   libcunit1-dev
+vcs
+sudo rosdep init
+rosdep update
+echo $default
+echo $DEFAULT
+colcon test
+ls
+cw
+ls
+cs
+ls
+cd ..
+colcon test
+cb
+ls
+ament_flake8
+python3 -V
+sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1
+python3 -V
+sudo apt update && sudo apt install -y   build-essential   cmake   git   libbullet-dev   python3-colcon-common-extensions   python3-flake8   python3-pip   python3-pytest-cov   python3-rosdep   python3-setuptools   python3-vcstool   wget
+python3 -m pip install -U   argcomplete   flake8-blind-except   flake8-builtins   flake8-class-newline   flake8-comprehensions   flake8-deprecated   flake8-docstrings   flake8-import-order   flake8-quotes   pytest-repeat   pytest-rerunfailures   pytest
+sudo apt install --no-install-recommends -y   libasio-dev   libtinyxml2-dev   libcunit1-dev
+history
+clear
+ls
+cd colcon_ws
+ls
+colcon build 
+cs
+ros2 pkg create --build-type ament_python my_pkg
+cw
+cb
+cs
+ls
+cd my_pkg
+ls
+cw
+cb
+ros2 run my_pkg mpub 
+sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1
+sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 2
+python3 -V
+sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 2
+sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 1
+python3 -V
+sudo update-alternatives --config python3
+python3 -V
+ros2 run my_pkg mpub 
+cb
+ros2 run my_pkg mpub
+cd ..
+cd colcon_ws/
+cd src
+cd ..
+history
+sudo update-alternatives --config python3
+ros2 run my_pkg mpub
+python3 -m pip install -U   argcomplete   flake8-blind-except   flake8-builtins   flake8-class-newline   flake8-comprehensions   flake8-deprecated   flake8-docstrings   flake8-import-order   flake8-quotes   pytest-repeat   pytest-rerunfailures   pytest
+ros2 run my_pkg mpub
+clear
+ros2 run my_pkg mpub
+ros2 topic echo /message
+clear
+cw
+cb
+cw
+cb
+clear
+ros2 run my_pkg mpub
+ros2 run my_pkg msub
+rqt
+clear
+cb
+cbp my_pkg
+cb
+rosdep 
+rosdep init
+rosdep 
+rosdep update
+cb
+python3 -m pip install --user -e .
+python -V
+python3 -m pip install setuptools==58.2.0
+cb
+clear
+ros2 run my_pkg msub 
+ros2 run my_pkg mpub
+cw
+cb
+ros2 run my_pkg mpub
+sudo nano ~/.basrc
+sudo nano ~/.bashrc
+ros2 run my_pkg msub 
+clear
+ros2 run my_pkg msub 
+ros2 run my_pkg tsub 
+ros2 run my_pkg msub
+clear
+ros2 run my_pkg msub
+clear
+ros2 run my_pkg msub
+ros2 run my_pkg m2sub
+clear
+ros2 run my_pkg m2sub
+ls
+mkdir robot_ws
+ls
+cd robot_ws
+mkdir src
+ls
+sudo nano ~/.bashrc
+source~/.bashrc
+source ~/.bashrc
+clear
+cd src
+ros2 pkg create --build-type ament_python test_pkg
+ls
+cd test_pkg/
+ls
+cd test_pkg
+ls
+cd ..
+colcon build
+ls
+cd src
+ls
+cd test_pkg/
+ls
+sudo nano setup.cfg
+cd ..
+ls
+colcon build
+hisotry
+history
+source ~/.bashrc
+cb
+python3 -m pip install setuptools==58.2.0
+clear
+ros2 run my_pkg mpub 
+clear
+cb
+ros2 run my_pkg tpub
+ros2 run my_pkg mpub
+clear
+cb
+ros2 run my_pkg mpub
+clear
+cb
+clear
+ros2 run my_pkg mpub
+ros2 run my_pkg tpub
+ros2 run my_pkg mtsub 
+rqt
+clear
+ros2 run turtlesim turtlesim_node
+ros2 topic list -t
+cs
+ros2 pkg create --build-type ament_python move_turtle
+cw
+cb
+ros2 run move_turtle mturtle 
+ros2 service call /spawn turtlesim/srv/Spawn "{x: 5.5 , y: 7.0 , theta: 1.5, name: 'turtle2'}"
+ros2 topic list -t
+ros2 service call /turtle1/set_pen turtlesim/srv/SetPen "{r: 100, g: 50, b: 200, width : 5}"
+ros2 run move_turtle mturtle 
+ros2 service call /spawn turtlesim/srv/Spawn "{x: 5.5 , y: 7.0 , theta: 1.5, name: 'turtle2'}"
+ros2 service call /turtle1/set_pen turtlesim/srv/SetPen "{r: 100, g: 50, b: 200, width : 5}"
+ros2 run move_turtle mturtle 
+rqt
+ros2 topic echo /clock
+rt
+ros2 topic list
+ros2 param list
+ros2 param set use_sim_time True
+ros2 param set use_sim_time 'True'
+ros2 param set use_sim_time {'True'}
+ros2 param get use_sim_time
+ros2 node list
+ros2 param get /turtlesim use_sim_time
+ros2 param set /turtlesim use_sim_time True
+ros2 topic list
+ros2 topic echo /clock
+ros2 topic list-t
+ros2 topic list -t
+ros2 run my_pkg tsub 
+cs
+ls
+ros2 pkg create --build-type ament_cmake my_interface
+cw
+cb
+clear
+sb
+ros2 run my_pkg myinterfacesub
+cw
+cbp my_pkg
+sb
+ros2 run my_pkg myinterfacepub
+clear
+cb
+ros2 run my_pkg msrvserver 
+cw
+cb
+ros2 run my_pkg msrvclient
+ros2 run my_pkg msrvclient 3 2
+ros2 run my_pkg msrvclient
+ros2 run my_pkg msrvclient 10 7
+clear
+cb
+cw
+cb
+ros2 run my_pkg mactionserver 
+ros2 run my_pkg mactionclient 4
+ros2 run my_pkg mactionclient 5
+clear
+ros2 run my_pkg mactionclient 5
+/usr/bin/python3.7 /home/aa/colcon_ws/src/arithmetic/arithmetic/argument.py
+ros2 param list
+ros2 param set /argument max_random_num 50
+ros2 run arithmethic argsub
+ros2 run arithmetic argsub
+ros2 run arithmetic operator 
+ros2 run arithmetic arg
+rqt
+ros2 run arithmetic arg
+clear
+ros2 run arithmetic checker 
+ros2 run arithmetic checker 100
+ros2 run arithmetic checker 30
+ros2 run my_pkg msrvserver 
+clear
+cw
+cd ..
+ros2 run my_pkg mactionserver 
+clear
+ros2 run my_pkg mactionserver 
+cl;ear
+clear
+cw
+cb
+cs
+ros2 pkg create --build-type ament_python arithmetic
+cw
+cb
+clear
+cb
+clear
+cb
+clear
+ros2 run arithmetic arg
+ros2 pkg list
+ros2 pkg list | grep arithmethic
+ros2 pkg list | grep arith
+clear
+cb
+ros2 run arithmetic arg
+clear
+ros2 run arithmetic arg
+clear
+ros2 run arithmetic arg
+clear
+cbp my_interface
+cb
+clear
+ros2 run arithmetic main
+cb
+ros2 run arithmetic main
+clear
+cb
+clear
+ros2 run arithmetic main
+ros2 run arithmetic operator 
+ros2 param list -t
+ros2 param list 
+ros2 param set /argument max_random_num 50
+ros2 run arithmetic main
+ros2 run arithmetic arg
+ros2 run arithmetic checker 
+ros2 run arithmetic checker 50
+ros2 run arithmetic arg
+ros2 run arithmetic argsub
+ros2 run arithmetic arg
+clear
+ros2 param list
+ros2 param set /argument max_random_num 100
+ros2 param set /argument min_random_num 50
+clear
+ros2 run arithmetic operator
+clear
+ros2 run arithmetic checker 500
+ros2 run arithmetic checker 10000
+clear
+ros2 run arithmetic main
+clear
+cw
+cb
+ls
+cd src
+ls
+cd my_pkg
+ls
+cd launch/
+ls
+python3 simplempubsub.lauch.py 
+python3 simplempubsub.lauch.py \
+ros2 launch my_pkg simplempubsub.lauch.py 
+cb
+ros2 launch my_pkg simplempubsub.lauch.py 
+cb
+ros2 launch my_pkg simplempubsub.launch.py 
+ros2 run turtlesim turtlesim_node 
+clear
+cb
+ros2 launch my_pkg turtlesim.launch.py 
+cb
+ros2 launch my_pkg turtlesim.launch.py 
+ros2 run turtlesim turtlesim_node
+cb
+ros2 run turtlesim turtlesim_node
+ros2 launch my_pkg turtlesim.launch.py 
+cb
+ros2 launch my_pkg turtlesim.launch.py 
+cb
+ros2 launch my_pkg turtlesim.launch.py 
+cb
+ros2 launch my_pkg turtlesim.launch.py 
+clear
+ros2 run arithmetic main
+ros2 topic list -t
+ros2 topic echo /message 
+clear
+ros2 param list
+ros2 node list
+ros2 service call /spawn turtlesim/srv/Spawn "{x: 3, y: 7, theth: 0.2, name: 'reonardo'}"
+clear
+ros2 run arithmetic operator 
+ros2 run arithmetic checker 
+ros2 run arithmetic checker --goal_total_sum 500
+ros2 run arithmetic checker --goal_total_sum 30
+ros2 run arithmetic checker --goal_total_sum 100
+rqt
+clear
+ros2 run arithmetic arg
+sudo apt remove gazebo11 libgazebo11-dev
+sudo apt install gazebo9 libgazebo9-dev
+sudo apt install ros-dashing-gazebo-ros-pkgs
+curl -sSL http://get.gazebosim.org | sh
+sudo apt remove gazebo11 libgazebo11-dev
+sudo apt install gazebo9 libgazebo9-dev
+sudo apt install ros-dashing-gazebo-ros-pkgs
+apt list | grep gazebo
+history
+gazebo
+rviz
+rviz2
+gazebo
+gazebo-9.19.0 
+glxgears
+sudo apt install mesa-utils
+glxgears
+gazebo
+killgazebo
+gazebo
+mkdir turtlebot3_ws
+cd turtlebot3_ws/
+mkdir src
+ls
+cd ..
+ls
+cd ~/turtlebot3_ws/src/
+git clone -b dashing-devel https://github.com/ROBOTIS-GIT/turtlebot3_simulations.git
+ls
+cd turtlebot3_simulations/
+ls
+cd turtlebot3_gazebo/
+ls
+cd src
+ls
+cd ..
+ls
+cd ..
+ls
+cd ..
+ls
+cd ..
+colcon build --symlink-install
+echo 'export GAZEBO_MODEL_PATH=$GAZEBO_MODEL_PATH:~/turtlebot3_ws/src/turtlebot3/turtlebot3_simulations/turtlebot3_gazebo/models' >> ~/.bashrc
+sb
+ros2 launch turtlebot3_gazebo empty_world.launch.py
+sb
+ros2 launch turtlebot3_gazebo empty_world.launch.py
+clear
+history
+rqt
+gazebo
+killgazebo
+gazebo
+ros2 topic list -t
+rqt
+clear
+ros2 run turtlebot3_teleop teleop_keyboard 
+gazebo
+echo "export SVGA_VGPU10=0" >> ~/.profile
+export SVGA_VGPU10=0
+gazebo
+history
+clear
+ros2 run arithmetic main
+ros2 run arithmetic arg
+ros2 run arithmetic operator 
+ros2 run arithmetic checker -g 10
+ros2 run arithmetic checker -g 10 -a 1
+ros2 run arithmetic checker -h
+ros2 run arithmetic checker -g 10 -a 1
+ros2 run arithmetic checker -g 10 -a 1 --ros-arg 123
+ros2 run arithmetic checker -a 1 -g 10
+ros2 run arithmetic checker --ros-arg 10 -a 1 -g 10
+ros2 run arithmetic checker -a 1 -g 10 abcdefg
+ros2 run arithmetic checker -a 1 -g 10 --abcdefg
+ros2 run arithmetic checker -a 1 -g 10 -abcdefg
+ros2 run arithmetic checker -a 1 -g 10 abcdefg
+history
+ros2 launch turtlebot3_gazebo empty_world.launch.py
+/usr/bin/python3.7 /home/aa/ict_robot_dajung/pygame/33_pizza/main.py
+/usr/bin/python3.7 /home/aa/ict_robot_dajung/pygame/33_pizza/pg_game.py
+ros2 run my_pkg mpub 
+[A
+ros2 run my_pkg mpub 
+python3.6 -V
+ros2 run my_pkg mpub 
+history | grep pip install
+history | grep pip
+ros2 run my_pkg mpub 
+python3.6 -m pip install youtube_dl
+ros2 run my_pkg mpub 
+python -V
+python
+python3
+python3 -m pip list
+python3 -m pip install pip-upgrade==23.1.2
+sudo python3 -m pip install pip==23.1.2
+sudo python3 -m pip --upgrade wheel
+sudo python3 -m pip install --upgrade wheel
+ls
+cd Downloads/
+ls
+ros2 run my_pkg mpub
+python3.6 -m pip install opencv-contrib-python
+python3.6 -m pip install pip-upgrade
+python3.6 -m pip install opencv-contrib-python
+/usr/bin/python3.6 -m pip install --upgrade pip
+sudo /usr/bin/python3.6 -m pip install --upgrade pip
+sudo python3.6 -m pip install opencv-contrib-python
+sudo /usr/bin/python3.6 -m pip install --upgrade pip
+/usr/bin/python3.6 -m pip install --upgrade pip
+/usr/bin/python3.6 -m pip install opencv-contrib-python==4.9.1.1
+/usr/bin/python3.6 -m pip install opencv-contrib-python==4.7.0.72
+/usr/bin/python3 /home/aa/colcon_ws/src/my_pkg/my_pkg/simple_message_pub.py
+pip list | grep opencv
+pip list
+/usr/bin/python3 /home/aa/ict_robot_sj/01_imread.py
+python3 -m pip list | grep opencv
+python3 -V
+/usr/bin/python3.6 -m pip install opencv-contrib-python==4.9.0.72
+/usr/bin/python3.6 -m pip install opencv-contrib-python==4.5.3.56 
+/usr/bin/python3 /home/aa/ict_robot_sj/23_shape.py
+/usr/bin/python3 /home/aa/ict_robot_sj/class24.py
+/usr/bin/python3 /home/aa/ict_robot_sj/class25.py
+/usr/bin/python3 /home/aa/ict_robot_sj/class26.py
+/usr/bin/python3 /home/aa/ict_robot_sj/class27.py
